# rat-bar

./: Cargo.toml  LICENSE  README.md  config.yaml  flake.nix  layout.yaml  package.nix  provider.nu  providers.nu  providers.yaml  scripts.nu
example-config/: layout.yaml  providers.nu  providers.yaml
nix/modules/: rat-bar.nix
nix/pkgs/: nu-providers.nix  nu-scripts.nix  package.nix  providers.nix  rat-bar.nix  rs-providers.nix  rs-scripts.nix  scripts.nix
rat-bar/: Cargo.toml
rat-bar/src/: app.rs  config.rs  event.rs  main.rs  ui.rs
rat-bar/src/components/: diagnostics.rs  mod.rs  provider.rs
ratbar-providers/: Cargo.toml
ratbar-providers/src/: clock.rs  cpu.rs  gpu.rs  main.rs  mem.rs  net.rs  niri.rs  visualizer.rs
ratbar-providers/src/media/: mod.rs
ratbar-providers/src/media/dbus/: media_player2.rs  mod.rs  player.rs
ratbar-scripts/: Cargo.toml
ratbar-scripts/src/: main.rs
src/: app.rs  config.rs  event.rs  main.rs  ui.rs
src/components/: cpu.rs  date.rs  mod.rs  net.rs  niri_info.rs  now_playing.rs  provider.rs  ram.rs  visualizer.rs
src/dbus_integration/: media_player2.rs  mod.rs  player.rs
src/widgets/: bar_graph.rs  graph.rs  kv_bar.rs  layout.rs  mod.rs  percentage_bar.rs  scroll_text.rs  weather.rs
