[package]
name = "rat-bar"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.5.0"
async-signal = "0.2.13"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures-concurrency = "7.7.0"
futures-lite = "2.6.1"
image = "0.25.9"
itertools = "0.14.0"
niri-ipc = "25.11.0"
pipewire = "0.9.2"
ratatui = {version = "0.30.0", features = ["serde"]}
ratatui-image = { version = "10.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sysinfo = { version = "0.37.2", features = ["windows"] }
tokio = { version = "1.49.0", features = ["full"] }
zbus = "5.13.1"
