[package]
name = "rat-bar"
version = "0.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", default-features = false, features = ["event-stream"] }
dirs = "6.0.0"
futures-concurrency = "7.7.0"
image = { version = "0.25.9", default-features = false, features = ["png"]}
itertools = "0.14.0"
lazy_static = "1.5.0"
pipewire = "0.9.2"
ratatui = {version = "0.30.0", features = ["serde"]}
ratatui-image = { version = "10.0.2", default-features = false, features = ["crossterm"] }
regex = "1.12.3"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
