[package]
name = "ratbar-providers-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
humantime = "2.3.0"
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
sysinfo = "0.38.4"
crossbeam = { version = "0.8.4", default-features = false }
itertools = "0.14.0"
zbus = "5.14.0"
smol = "2.0.2"
futures-concurrency = "7.7.1"

rustfft = { version = "6.4.1", optional = true}
pipewire = { version = "0.9.2", optional = true }

[features]
default = ["visualizer"]
visualizer = ["dep:rustfft", "dep:pipewire"]

